
* Compile the 750KiB freedesktop.org.xml file to a binary format which gets
  loaded on Zope startup instead of reparsing the XML file each time. If the
  modification time of the source xml file changes, the binary file is
  automatically recreated. If the binary file cannot be created the xml file
  is reparsed each time as before.
  [hannosch]

1.6.1 (unreleased)
------------------

* Ensure that lookup doesn't return an empty tuple if asked with a
  mimetypestring returned by guessMime. 
  Fixes http://dev.plone.org/plone/ticket/7876
  [csenger]

* Lookup by extensions (not glob) as submitted and retry it with lower case to
  catch filenames like 'file.TXT'
  [csenger]

1.6.0 - 2007-08-16
------------------

1.6.0-rc2 - 2007-07-27
----------------------

* Updated componentregisty.xml to new style.
  [hannosch]

1.6.0-rc1 - 2007-07-04
----------------------

* Do not modify the portal_skins tool configuration
  [wichert]

1.6.0-b5 - 2007-05-05
---------------------

* Fix signature of fixUpSMIGlobs.
  [wichert]

1.6.0-b4 - 2007-04-28
---------------------

* Go back to using getToolByName for CMF tools.
  [nouri]

1.6.0-b3 - 2007-03-20
---------------------

* Removed tests/runalltests.py and tests/framework.py as they have
  outlived their usefulness. To run tests use Zope's testrunner:
  ./bin/zopectl test --nowarn -s Products.MimetypesRegistry
  [stefan]

1.6.0-b2 - 2007-03-05
---------------------

* Use new cmf:registerDirectory zcml directive and removed corresponding code
  from the initialize method.
  [hannosch]

1.6.0-b1 - 2007-02-27
---------------------

* version bumped to 1.6, 1.5 is now for archetypes 1.4 bugfixing
  whatever happens with 1.6.x shouldt have effects on AT 1.4
  [jensens]

1.5.0-a1 - 2007-02-06
---------------------

* Implemented PLIP 149
  [tomster]

1.4.1-final - 2006-09-15
------------------------

* Converted usage of zLOG to new Python logging module.
  [hannosch]

* Mime type links are now urllib quoted.  This fixes #682 